[package]
name = "negative_scanner"
version = "0.1.0"
authors = ["Rasmus Lövegren <fruitiex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debug = 0

[dependencies]
env_logger = "0.9.0"
log = "0.4.17"
opencv = "0.63.1"
serialport = "4.0.1"
